tests/lean/noncomp_error.lean.expected.out
noncomp_error.lean:1:0: error: definition 'a' was incorrectly marked as noncomputable
