tests/lean/noncomp_error.lean
noncomputable definition a := 2
